LogExecutionAnnotation is added

--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop', version: '2.6.2'
 	testImplementation group: 'org.spockframework', name: 'spock-core', version: '2.0-M2-groovy-3.0'
 
 }
